tests/build/cases/widget_new/unknown_member_in_when_expr2.stderr
error[E0599]: no associated item named `__w_unknown__` found for struct `is_pressed` in the current scope
 --> cases/widget_new/unknown_member_in_when_expr2.rs:8:16
  |
8 |         when *#is_pressed.unknown { // only .0 or .state allowed.
  |                ^^^^^^^^^^
  |                |
  |                associated item not found in `is_pressed`
  |                help: there is an associated function with a similar name: `__new__`
